--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,10 @@
 /* 平板设备 */
 @media screen and (max-width: 768px) {
+    .filter-group {
+        flex-direction: column;
+        align-items: baseline;
+    }
+
     .nav-container {
         flex-direction: column;
         text-align: center;
@@ -18,10 +23,6 @@
 /* 移动设备 */
 @media screen and (max-width: 480px) {
     .nav-menu {
-        flex-direction: column;
-    }
-
-    .specialty-tags {
         flex-direction: column;
     }
 
